<resources>
    <string name="app_name">estacionaMe</string>
    <string name="office">Gobierno de Morón</string>
    <string name="office_tag">Corazón del Oeste</string>
    <string name="placeholder.username">Usuario</string>
    <string name="placeholder.password">Contraseña</string>
    <string name="createUser">Crear Usuario</string>
    <string name="login">Entrar</string>
    <string name="placeholder.user.name">Usuario</string>
    <string name="placeholder.user.firstname">Nombre</string>
    <string name="placeholder.user.lastname">Apellido</string>
    <string name="placeholder.user.id">DNI</string>
    <string name="placeholder.user.phone">Teléfono</string>
    <string name="placeholder.user.street">Domicilio</string>
    <string name="placeholder.user.place">Localidad</string>
    <string name="placeholder.repeat_password">Repetir Contraseña</string>
    <string name="user_data_title">Datos Usuario</string>
    <string name="user_vehicle_title">Datos Vehículo</string>
    <string name="placeholder.vehicle.brand">Marca</string>
    <string name="placeholder.vehicle.model">Modelo</string>
    <string name="placeholder.vehicle.plate">Patente</string>
    <string name="placeholder.vehicle.color">Color</string>
    <string name="placeholder.vehicle.state">Estado</string>
    <string name="placeholder.vehicle.details">Detalles</string>
    <string name="vehicle_assurance_title">Datos Seguro</string>
    <string name="placeholder.assurance.company">Empresa</string>
    <string name="placeholder.assurance.plan">Plan</string>
    <string name="placeholder.assurance.id">Póliza</string>
    <string name="cc_title">Datos Tarjeta</string>
    <string name="placeholder.cc.number">Número de Tarjeta</string>
    <string name="placeholder.cc.expire">Vencimiento</string>
    <string name="placeholder.cc.sec">Código de Seguridad</string>
    <string name="accept">Aceptar</string>
    <string name="select_parking">Solicitar Estacionamiento</string>
    <string name="see_credits">Consultar Créditos</string>
    <string name="update_data">Actualizar Datos</string>
    <string name="private_parking">Garage Privado</string>
    <string name="public_parking">Calle Pública</string>
    <string name="about_title">Acerca de</string>
    <string name="creator">Creador</string>
    <string name="creator_office">Municipalidad de Morón</string>
    <string name="about_us">Acerca de</string>
    <string name="office_url">http://www.moron.gov.ar/</string>
    <string name="creator_office_web">Acceder a la Web</string>
    <string name="creator_office_info">ALTE. BROWN 946\n(B1708EFR) - MORON, BS. AS.\nTEL: (54-11) 4489-7777\nOIR: 0800-666-6766</string>
    <string name="about_us_info">Aplicación creada por Alejandro Di Lalla para su tesis para la carrera de Ingeniero Agrimensor en la Universidad de Morón. Con especial agrademinientos a Lucas Gabriel Sánchez por su ayuda en el desarrollo la versión alpha de la aplicación. Todos los derechos reservados.</string>
    <string name="show_credits">Consultar Saldo</string>
    <string name="buy_credits">Comprar Créditos</string>
    <string name="credits_balance">Saldo</string>
    <string name="balance">Usted posee %d créditos</string>
    <string name="credits_buy_balance">Comprando Créditos</string>
    <string name="buy_balance_ask">¿Desea comprar 10 créditos?</string>
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="credits_title">Créditos</string>
</resources>
