<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="gov.moron.estacionarme.Credits">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/creditsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_margin="24dp"
                android:textSize="30sp"
                android:elevation="0dp"
                android:clickable="false"
                android:fontFamily="monospace"
                android:textColor="@color/colorPrimary"
                android:text="@string/credits_title" />

        </RelativeLayout>

        <TextView
            android:id="@+id/buyCredits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:elevation="0dp"
            android:clickable="true"
            android:fontFamily="monospace"
            android:textColor="@color/colorPrimary"
            android:text="@string/buy_credits" />

        <TextView
            android:id="@+id/showCredits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:elevation="0dp"
            android:clickable="true"
            android:fontFamily="monospace"
            android:textColor="@color/colorPrimary"
            android:text="@string/show_credits" />

    </LinearLayout>

</FrameLayout>
