<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="gov.moron.estacionarme.About">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/creditsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_margin="24dp"
                android:textSize="30sp"
                android:elevation="0dp"
                android:clickable="false"
                android:fontFamily="monospace"
                android:textColor="@color/colorPrimary"
                android:text="@string/about_title" />

        </RelativeLayout>

        <TextView
            android:id="@+id/aboutUsInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:elevation="0dp"
            android:clickable="false"
            android:enabled="false"
            android:fontFamily="monospace"
            android:textColor="@color/colorPrimary"
            android:text="@string/about_us_info" />

        <TextView
            android:id="@+id/creatorOffice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:elevation="0dp"
            android:clickable="true"
            android:fontFamily="monospace"
            android:textColor="@color/colorPrimary"
            android:text="@string/creator_office" />

    </LinearLayout>

</FrameLayout>
