<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:layout_margin="32dp"
    tools:context="gov.moron.estacionarme.Login">

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:fontFamily="monospace"
        android:hint="@string/placeholder.username"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:ems="10"
        android:fontFamily="monospace"
        android:hint="@string/placeholder.password"
        android:inputType="textPassword" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="16dp"
            android:elevation="0dp"
            android:clickable="true"
            android:fontFamily="monospace"
            android:textColor="@color/colorPrimary"
            android:text="@string/login" />

        <TextView
            android:id="@+id/createUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/login"
            android:layout_margin="16dp"
            android:elevation="0dp"
            android:clickable="true"
            android:fontFamily="monospace"
            android:textColor="@color/colorPrimary"
            android:text="@string/createUser" />

        <TextView
            android:id="@+id/aboutUs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/createUser"
            android:layout_margin="16dp"
            android:elevation="0dp"
            android:clickable="true"
            android:fontFamily="monospace"
            android:textColor="@color/colorPrimary"
            android:text="@string/about_us" />

    </RelativeLayout>

</LinearLayout>
